// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing stock filter renders the stock filter block 1`] = `
<div>
  <div
    class="wc-block-stock-filter"
  >
    <ul
      class="wc-block-checkbox-list wc-block-components-checkbox-list wc-block-stock-filter-list"
    >
      <li>
        <div
          class="wc-filter-element-checkbox"
          role="checkbox"
          tabindex="0"
        >
          <input
            id="instock"
            tabindex="-1"
            type="checkbox"
            value="instock"
          />
          <span
            aria-hidden="true"
            class="wc-filter-element-checkbox__checkbox"
          />
        </div>
        <label
          for="instock"
        >
          In stock
        </label>
      </li>
      <li>
        <div
          class="wc-filter-element-checkbox"
          role="checkbox"
          tabindex="0"
        >
          <input
            id="onbackorder"
            tabindex="-1"
            type="checkbox"
            value="onbackorder"
          />
          <span
            aria-hidden="true"
            class="wc-filter-element-checkbox__checkbox"
          />
        </div>
        <label
          for="onbackorder"
        >
          On backorder
        </label>
      </li>
      <li>
        <div
          class="wc-filter-element-checkbox"
          role="checkbox"
          tabindex="0"
        >
          <input
            id="outofstock"
            tabindex="-1"
            type="checkbox"
            value="outofstock"
          />
          <span
            aria-hidden="true"
            class="wc-filter-element-checkbox__checkbox"
          />
        </div>
        <label
          for="outofstock"
        >
          Out of stock
        </label>
      </li>
    </ul>
    <div
      class="wc-block-stock-filter__actions"
    />
  </div>
</div>
`;

exports[`Testing stock filter renders the stock filter block with the filter button 1`] = `
<div>
  <div
    class="wc-block-stock-filter"
  >
    <ul
      class="wc-block-checkbox-list wc-block-components-checkbox-list wc-block-stock-filter-list"
    >
      <li>
        <div
          class="wc-filter-element-checkbox"
          role="checkbox"
          tabindex="0"
        >
          <input
            id="instock"
            tabindex="-1"
            type="checkbox"
            value="instock"
          />
          <span
            aria-hidden="true"
            class="wc-filter-element-checkbox__checkbox"
          />
        </div>
        <label
          for="instock"
        >
          In stock
        </label>
      </li>
      <li>
        <div
          class="wc-filter-element-checkbox"
          role="checkbox"
          tabindex="0"
        >
          <input
            id="onbackorder"
            tabindex="-1"
            type="checkbox"
            value="onbackorder"
          />
          <span
            aria-hidden="true"
            class="wc-filter-element-checkbox__checkbox"
          />
        </div>
        <label
          for="onbackorder"
        >
          On backorder
        </label>
      </li>
      <li>
        <div
          class="wc-filter-element-checkbox"
          role="checkbox"
          tabindex="0"
        >
          <input
            id="outofstock"
            tabindex="-1"
            type="checkbox"
            value="outofstock"
          />
          <span
            aria-hidden="true"
            class="wc-filter-element-checkbox__checkbox"
          />
        </div>
        <label
          for="outofstock"
        >
          Out of stock
        </label>
      </li>
    </ul>
    <div
      class="wc-block-stock-filter__actions"
    >
      <button
        class="wp-block-button__link wc-block-filter-submit-button wc-block-components-filter-submit-button wc-block-stock-filter__button"
        type="submit"
      >
        <span
          aria-hidden="true"
        >
          Apply
        </span>
        <span
          class="screen-reader-text"
        >
          Apply filter
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Testing stock filter renders the stock filter block with the product counts 1`] = `
<div>
  <div
    class="wc-block-stock-filter"
  >
    <ul
      class="wc-block-checkbox-list wc-block-components-checkbox-list wc-block-stock-filter-list"
    >
      <li>
        <div
          class="wc-filter-element-checkbox"
          role="checkbox"
          tabindex="0"
        >
          <input
            id="instock"
            tabindex="-1"
            type="checkbox"
            value="instock"
          />
          <span
            aria-hidden="true"
            class="wc-filter-element-checkbox__checkbox"
          />
        </div>
        <label
          for="instock"
        >
          In stock
          <span
            class="wc-filter-element-label-list-count"
          >
            <span
              aria-hidden="true"
            >
              18
            </span>
            <span
              class="screen-reader-text"
            >
              18 products
            </span>
          </span>
        </label>
      </li>
      <li>
        <div
          class="wc-filter-element-checkbox"
          role="checkbox"
          tabindex="0"
        >
          <input
            id="onbackorder"
            tabindex="-1"
            type="checkbox"
            value="onbackorder"
          />
          <span
            aria-hidden="true"
            class="wc-filter-element-checkbox__checkbox"
          />
        </div>
        <label
          for="onbackorder"
        >
          On backorder
          <span
            class="wc-filter-element-label-list-count"
          >
            <span
              aria-hidden="true"
            >
              5
            </span>
            <span
              class="screen-reader-text"
            >
              5 products
            </span>
          </span>
        </label>
      </li>
      <li>
        <div
          class="wc-filter-element-checkbox"
          role="checkbox"
          tabindex="0"
        >
          <input
            id="outofstock"
            tabindex="-1"
            type="checkbox"
            value="outofstock"
          />
          <span
            aria-hidden="true"
            class="wc-filter-element-checkbox__checkbox"
          />
        </div>
        <label
          for="outofstock"
        >
          Out of stock
          <span
            class="wc-filter-element-label-list-count"
          >
            <span
              aria-hidden="true"
            >
              1
            </span>
            <span
              class="screen-reader-text"
            >
              1 product
            </span>
          </span>
        </label>
      </li>
    </ul>
    <div
      class="wc-block-stock-filter__actions"
    />
  </div>
</div>
`;
